2016-04-23 0.7.8 alpha
More implementation of plugin support.
Migrate channel activity indicator to the new
callback system.
Added a testing plugin.
Plugins are now loaded correctly.
However the plugin API is not working properly.

2016-04-23 0.7.8 alpha
Basic stubs for plugin support.

2016-04-22 0.7.2
Remove visualization stub in settings window.
Warn the user when an invalid file is loaded.
Discard fluidsynth warnings.
First stable version!

2016-04-21 0.7.2 beta
Minor change to the main window.
Added "click to copy" to the file information window.

2016-04-20 0.7.2 beta
UI refinements:
	Use Qt layouts in most of the dialogs.
	Allow seeking with a single click on the slider.
	Remove file extension from the file name on main window.
	Use QLCDNumber to display current polyphone.
Fixed two memory leaks.
Minor improvement in MIDI reading process.
Added a function to dump midi file content (for debugging).

2016-04-19 0.7.2 beta
Fixed several bugs in command line parsing (on Windows).

2016-04-18 0.7.2 beta
Use std::vector for the event list.
Add panic action.
Minor changes on the panic function.

2016-04-17 0.7.2 beta
A little more documentaion work...

2016-04-16 0.7.2 beta
Don't do full initialization before pharsing arguments.
Fixed load folder not working properly when a relative path is given.
Documentation...

2016-04-15 0.7.2 beta
A little documentation work...

2016-04-14 0.7.2 beta
Also reset mapped midi devices.
Translation work...

2016-04-13 0.7.2 beta
Reset channel activity indicators properly.
Windows version now has an icon.
Fixed a null pointer reference.

2016-04-12 0.7.2 beta
Partially fixed unicode file name issue on Windows.
First steps to l10n.
Move documentation online.
Improved deployment on debian based system.

2016-04-11 0.7.1 beta
Sanitise MIDI mapping functionality.

2016-04-10 0.7.1 beta
Implement output mapping related options.
Fixed several stupid mistakes and typos.

2016-04-09 0.7.1 beta